--- a/app/views/tareas/show.html.erb
+++ b/app/views/tareas/show.html.erb
@@ -8,8 +8,8 @@
 <p>subida con exito!</p>
 
 <div>
-
-<%= link_to "Back to tarea", tarea_path %>
+<%= link_to "Edit this tarea", edit_tarea_path(@tarea) %> |
+<%= link_to "Back to tareas", tareas_path %>
 
 <%= button_to "Destroy this tarea", @tarea, method: :delete %>
 <div>
