--- a/app/views/tareas/show.html.erb
+++ b/app/views/tareas/show.html.erb
@@ -11,5 +11,5 @@
 <%= link_to "Edit this tarea", edit_tarea_path(@tarea) %> |
 <%= link_to "Back to tareas", tareas_path %>
 
-<%= button_to "Destroy this tarea", @tarea, method: :delete %>
+<%= button_to "Destroy this tarea", tarea_path, method: :delete %>
 <div>
